[package]
name = "scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { path = "wgpu" } 
futures-lite = "1.12"
wgpu-types = "=0.17.0"

[patch.crates-io]
wgpu-types = { path = "wgpu-types" }

[profile.release]
debug = 2
